--- a/index.html
+++ b/index.html
@@ -69,52 +69,40 @@
                 </div>
             </div>
         </div>
-
         <div id="content" style="z-index:999;" droppable>
-
-
-            <div style="padding:73px 50px 50px 113px;">
-
-
+            <div style="padding:73px 40px 40px 40px;">
                 <div class="row">
                     <div class="bs-docs-example bs-docs-example-popover">
-
-
-
-                    <div class="isotope">
-
-                        <div class="card" rating="3" popularity="126" name="Eleven Madison Park">
-                            <div class="popover top pin-align show-hand" id="card1">
-
-                                <div class="pin-in" id="pin1" onClick="unPin(1)"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
-                                <h3 class="popover-title" onClick="showModal(1)" name>Eleven Madison Park</h3>
-                                <div class="popover-content" onClick="showModal(1)">
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                <img src="http://s3-media2.ak.yelpcdn.com/bphoto/7DIHu8a0AHhw-BffrDIxPA/ms.jpg" alt="Business Picture" />
-                                            </td>
-                                            <td style="padding-left: 5px;">
-                                                <p>706 Mission St.</p>
-                                                <p>San Francisco, CA, 94103</p>
-                                                <p>Phone: +1-415-908-3801</p>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td style="padding-top: 7px;">
-                                                <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_3.png" alt="Rating image" />
-                                            </td>
-                                            <td>
-                                                <p>Reviews: 126</p>
-                                            </td>
-                                        </tr>
-                                    </table>
+                        <div class="isotope">
+                            <div class="card" rating="3" popularity="126" name="Eleven Madison Park">
+                                <div class="popover top pin-align show-hand" id="card1">
+                                    <div class="pin-in" id="pin1" onClick="unPin(1)"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
+                                    <h3 class="popover-title" onClick="showModal(1)" name>Eleven Madison Park</h3>
+                                    <div class="popover-content" onClick="showModal(1)">
+                                        <table>
+                                            <tr>
+                                                <td>
+                                                    <img src="http://s3-media2.ak.yelpcdn.com/bphoto/7DIHu8a0AHhw-BffrDIxPA/ms.jpg" alt="Business Picture" />
+                                                </td>
+                                                <td style="padding-left: 5px;">
+                                                    <p>706 Mission St.</p>
+                                                    <p>San Francisco, CA, 94103</p>
+                                                    <p>Phone: +1-415-908-3801</p>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td style="padding-top: 7px;">
+                                                    <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_3.png" alt="Rating image" />
+                                                </td>
+                                                <td>
+                                                    <p>Reviews: 126</p>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-
-
-                        <div class="card" rating="5" popularity="1008" name="Gramercy Tavern">
+                            <div class="card" rating="5" popularity="1008" name="Gramercy Tavern">
                               <div class="popover top pin-align show-hand" id="card2">
                                 <div class="pin-in" id="pin2" onClick="unPin(2)"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
                                 <h3 class="popover-title" onClick="showModal(2)" name>Gramercy Tavern</h3>
@@ -142,9 +130,6 @@
                                 </div>
                             </div>
                         </div>
-
-
-
                         <div class="card" rating="11" popularity="69" name="Graham Avenue Meats And Deli">
                             <div class="popover top pin-align show-hand" id="card3">
                                 <div class="pin-in" id="pin3" onClick="unPin(3)"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
@@ -172,49 +157,8 @@
                                     </table>
                                 </div>
                             </div>
-
                         </div>
-
-
-                        <div class="card" rating="5" popularity="2" name="Trader Joe's Wine Shop">
-                            <div class="popover top pin-align show-hand" id="card4">
-                                    <div class="pin-in" id="pin4" onClick="unPin(4)"><img src="imgs/pin_blue.png" alt="Pin overlay"/></div>
-                                    <h3 class="popover-title" onClick="showModal(4)" name>Trader Joe's Wine Shop</h3>
-                                    <div class="popover-content" onClick="showModal(4)">
-                                        <table>
-                                            <tr>
-                                                <td>
-                                                    <img src="http://s3-media2.ak.yelpcdn.com/bphoto/7DIHu8a0AHhw-BffrDIxPA/ms.jpg" alt="Business Picture" />
-                                                </td>
-                                                <td style="padding-left: 5px;">
-                                                    <p>706 Mission St.</p>
-                                                    <p>San Francisco, CA, 94103</p>
-                                                    <p>Phone: +1-415-908-3801</p>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td style="padding-top: 7px;">
-                                                    <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_5.png" alt="Rating image" />
-                                                </td>
-                                                <td>
-                                                    <p>Reviews: 2</p>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </div>
-                            </div>
                         </div>
-                    </div>
-
-
-
-
-
-
-
-
-
-
                         <div class="clearfix"></div>
                     </div>
                 </div>
@@ -227,7 +171,7 @@
                         width:350,
                         extruderOpacity:.8,
 
-                        hidePanelsOnClose:false,
+                        hidePanelsOnClose:true,
                         accordionPanels:false,
                         onExtOpen:function(){},
                         onExtContentLoad:function(){$("#extruderRight").openPanel();},
@@ -262,195 +206,54 @@
                     yqlgeo.get('visitor', normalize_yql_response);
             });
         </script>
+        <script>
+            $(function(){
+              var $container = $('.isotope');
+              $container.isotope({
+                itemSelector : '.card',
+                getSortData : {
+                  rating : function( $elem ) {
+                    return $elem.attr('rating');
+                  },
+                  popularity : function( $elem ) {
+                    return $elem.attr('popularity');
+                  },
+                  name : function ( $elem ) {
+                    return $elem.attr('name');
+                  }
+                }
+              });
+              var $optionSets = $('.option-set'),
+                  $optionLinks = $optionSets.find('a');
 
+              $optionLinks.click(function(){
+                var $this = $(this);
+                // don't proceed if already selected
+                if ( $this.hasClass('selected') ) {
+                  return false;
+                }
+                var $optionSet = $this.parents('.option-set');
+                $optionSet.find('.selected').removeClass('selected');
+                $this.addClass('selected');
 
-        <!-- Modal -->
-        <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-            <h3 id="myModalLabel">Eleven Madison Park</h3>
-          </div>
-          <div class="modal-body">
-            <div class="clearfix">
-                <div class="modal-main-col">
-                    <div class="modal-card-content">
-                        <table>
-                            <tr>
-                                <td>
-                                    <img src="http://s3-media2.ak.yelpcdn.com/bphoto/7DIHu8a0AHhw-BffrDIxPA/ms.jpg" alt="Business Picture" />
-                                </td>
-                                <td style="padding-left: 5px;">
-                                    <p>706 Mission St.</p>
-                                    <p>San Francisco, CA, 94103</p>
-                                    <p>Phone: +1-415-908-3801</p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td style="padding-top: 7px;">
-                                    <img src="http://media1.ak.yelpcdn.com/static/201012161694360749/img/ico/stars/stars_5.png" alt="Rating image" />
-                                </td>
-                                <td>
-                                    <p>Reviews: 2</p>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                    <p class="modal-title" style="padding-top: 15px; padding-bottom: 7px;">Notes: </p class="modal-title">
-                    <textarea class="new-comment-input" placeholder="Write a comment or note..."></textarea>
-                </div>
-                <div class="modal-sidebar">
-                    <p class="modal-title">Social</p class="modal-title">
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-text="Good Eats:" data-size="large" data-count="none" data-dnt="true" data-url="http://www.yelp.com/biz/eleven-madison-park-new-york">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                    <p class="modal-title">Custom Categories</p class="modal-title">
-                        <div class="editable-labels">
-                            <div class="editable-label">
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <div class="green-label custom-label-cube"></div>
-                                        </td>
-                                        <td>
-                                            <input class="label-title" id="greenTitle" type="text" placeholder="No name" name="green">
-                                        </td>
-                                        <td>
-                                            <a href="#" class="btn btn-success btn-small"><i class="icon-white icon-plus"></i></a>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <div class="editable-label">
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <div class="orange-label custom-label-cube"></div>
-                                        </td>
-                                        <td>
-                                            <input class="label-title" id="orangeTitle" type="text" placeholder="No name" name="orange">
-                                        </td>
-                                        <td>
-                                            <a href="#" class="btn btn-danger btn-small"><i class="icon-white icon-minus"></i></a>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <div class="editable-label">
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <div class="purple-label custom-label-cube"></div>
-                                        </td>
-                                        <td>
-                                            <input class="label-title" id="purpleTitle" type="text" placeholder="No name" name="purple">
-                                        </td>
-                                        <td>
-                                            <a href="#" class="btn btn-success btn-small"><i class="icon-white icon-plus"></i></a>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <div class="editable-label">
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <div class="red-label custom-label-cube"></div>
-                                        </td>
-                                        <td>
-                                            <input class="label-title" id="redTitle" type="text" placeholder="No name" name="red">
-                                        </td>
-                                        <td>
-                                            <a href="#" class="btn btn-danger btn-small"><i class="icon-white icon-minus"></i></a>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <div class="editable-label">
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <div class="blue-label custom-label-cube"></div>
-                                        </td>
-                                        <td>
-                                            <input class="label-title" id="blueTitle" type="text" placeholder="No name" name="blue">
-                                        </td>
-                                        <td>
-                                            <a href="#" class="btn btn-success btn-small"><i class="icon-white icon-plus"></i></a>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
-                        </div>
-                    <p class="modal-title">Yelp Categories</p class="modal-title">
+                // make option object dynamically, i.e. { filter: '.my-filter-class' }
+                var options = {'sortAscending' : false},
+                    key = $optionSet.attr('data-option-key'),
+                    value = $this.attr('data-option-value');
+                // parse 'false' as false boolean
+                value = value === 'false' ? false : value;
+                options[ key ] = value;
+                if ( key === 'layoutMode' && typeof changeLayoutMode === 'function' ) {
+                  // changes in layout modes need extra logic
+                  changeLayoutMode( $this, options )
+                } else {
+                  // otherwise, apply new options
+                  $container.isotope( options );
+                }
 
-                </div>
-                <div style="clear: both;"></div>
-            </div>
-            <div align="center" id="map" style="z-index: -1; width: 630px; height: 400px;"></div>
-          </div>
-          <div class="modal-footer">
-            <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-            <button class="btn btn-primary">Save changes</button>
-          </div>
-        </div>
-
-
-
-
-  <script>
-    $(function(){
-
-      var $container = $('.isotope');
-
-      $container.isotope({
-        itemSelector : '.card',
-        getSortData : {
-          rating : function( $elem ) {
-            return $elem.attr('rating');
-          },
-          popularity : function( $elem ) {
-            return $elem.attr('popularity');
-          },
-          name : function ( $elem ) {
-            return $elem.attr('name');
-          }
-        }
-      });
-
-
-      var $optionSets = $('.option-set'),
-          $optionLinks = $optionSets.find('a');
-
-      $optionLinks.click(function(){
-        var $this = $(this);
-        // don't proceed if already selected
-        if ( $this.hasClass('selected') ) {
-          return false;
-        }
-        var $optionSet = $this.parents('.option-set');
-        $optionSet.find('.selected').removeClass('selected');
-        $this.addClass('selected');
-
-        // make option object dynamically, i.e. { filter: '.my-filter-class' }
-        var options = {'sortAscending' : false},
-            key = $optionSet.attr('data-option-key'),
-            value = $this.attr('data-option-value');
-        // parse 'false' as false boolean
-        value = value === 'false' ? false : value;
-        options[ key ] = value;
-        if ( key === 'layoutMode' && typeof changeLayoutMode === 'function' ) {
-          // changes in layout modes need extra logic
-          changeLayoutMode( $this, options )
-        } else {
-          // otherwise, apply new options
-          $container.isotope( options );
-        }
-
-        return false;
-      });
-
-
-    });
-  </script>
-
+                return false;
+              });
+            });
+        </script>
     </body>
 </html>
